# tova-lang

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATA_PLAN.md  DOCS_PLAN.md  FEATURES_PLAN.md  GOVERNANCE.md  LICENSE  PERFORMANCE-PLAN.md  README.md  REVIEW-TASKS.md  ROADMAP.md  SECURITY.md  TASKS.md  _check_patterns.js  bunfig.toml  docs-audit-tasks.md  install.sh  package.json  tasks.db  tasks.db-shm  tasks.db-wal  test_ch1.tova  test_ch1b.tova  test_ch1c.tova  test_concat.tova  test_escape.tova  test_http_client.tova  test_join_newline.tova  test_min.tova  test_min10.tova  test_min11.tova  test_min12.tova  test_min13.tova  test_min2.tova  test_min3.tova  test_min4.tova  test_min5.tova  test_min6.tova  (+9 more)
.github/: PULL_REQUEST_TEMPLATE.md
.lux-out/: hello.shared.js  multi-server.client.js  multi-server.server.events.js  todo-app.client.js  todo-app.server.js  todo-app.shared.js
.tova-out/: app.client.js  app.server.js  app.shared.js  counter.client.js  hello.shared.js  multi-server.server.api.js  multi-server.shared.js  todo-app.server.js  todo-app.shared.js
benchmarks/: 01_fibonacci_recursive.tova  02_fibonacci_iterative.tova  03_prime_sieve.tova  04_matrix_multiply.tova  05_array_processing.tova  06_string_operations.tova  07_nbody.tova  08_pattern_matching.tova  09_result_option.tova  10_iife_elimination.tova  11_sort_benchmark.tova  12_parallel_map.tova  13_wasm_functions.tova  http_hello.tova  (+2 more)
tova_runtime/: Cargo.toml
tova_runtime/.cargo/: config.toml
tova_runtime/src/: channels.rs  executor.rs  host_imports.rs  lib.rs  scheduler.rs
(+693 files in other folders)
